Redoing Websites NavBar

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <title>Computer Science Cultivation</title>
 </head>
 <body>
+<h1>COMPUTER SCIENCE CULTIVATION</h1>
+<ul>
 
+</ul>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#Game">Game</a>
-        <a href="#Rate Us">Rate Us</a>
-        <a href="#Pretest/PostTest">Pretest/PostTet</a>
+         <li><a href="index.html">Home page</a></li>
+            <li><a href="game.html">Computer Science Cultivation Game</a></li>
+            <li><a href="postpretest.html">Post Test/ Pre Test</a></li>
+            <li><a href="rateus.html">Rate our game here!</a></li>
       </div>
     
 </body>
