Added changes to the website

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 <h1>COMPUTER SCIENCE CULTIVATION</h1>
 <ul>
-
+    <div class="flex-container">
+        <li><a href="index.html">Home page</a></li>
+           <li><a href="game.html">Computer Science Cultivation Game</a></li>
+           <li><a href="postpretest.html">Post Test/ Pre Test</a></li>
+           <li><a href="rateus.html">Rate our game here!</a></li>
+     </div>
 </ul>
-    <div class="topnav">
-         <li><a href="index.html">Home page</a></li>
-            <li><a href="game.html">Computer Science Cultivation Game</a></li>
-            <li><a href="postpretest.html">Post Test/ Pre Test</a></li>
-            <li><a href="rateus.html">Rate our game here!</a></li>
-      </div>
+
     
 </body>
 </html>
