Working more on website

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </ul>
 
 <h2> Welcome to Computer Science Cultivations main website!</h2>
+
+<h3>FIGHT EPIC MONSTERS!</h3>
+<img src="scene1.png" alt="Game Scene" width="80%" height="40%">
+<h4>CHOOSE YOUR ADVENTURE</h4>
+<img src="choosescene.png" alt="Choose scene" width="80%" height="40%">
     
 </body>
 </html>
