Changes to main pages

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
 
 <h2> Welcome to Computer Science Cultivations main website!</h2>
 
+<div class="container">
+    <h3>FIGHT EPIC MONSTERS!</h3>
+    <img src="scene1.png" alt="Game Scene" width="80%" height="40%">
+</div>
 
-<h4>FIGHT EPIC MONSTERS!</h4>
-<img src="scene1.png" alt="Game Scene" width="80%" height="40%">
-<h4>CHOOSE YOUR ADVENTURE</h4>
-<img src="choosescene.png" alt="Choose scene" width="80%" height="40%">
+<div class="container">
+    <h3>CHOOSE YOUR ADVENTURE</h3>
+    <img src="choosescene.png" alt="Choose scene" width="80%" height="40%">
+</div>
+
+
     
 </body>
 </html>
