--- a/rateus.html
+++ b/rateus.html
@@ -18,6 +18,7 @@
          </div>
     </ul>
     
+    <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUEQi_JyHd-Pk2IRnXVN9VAoQ7mC2nqAsU3EWMBhrD0zRsUw/viewform">Link to Rate Us</a> </h2>
     
 </body>
 </html>
