Adding more changes to website

--- a/rateus.html
+++ b/rateus.html
@@ -17,7 +17,7 @@
                <li><a href="rateus.html">Rate our game here!</a></li>
          </div>
     </ul>
-    
+    <p>Please let us know what you think after playing the game by clicking the link below!</p>
     <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSfUEQi_JyHd-Pk2IRnXVN9VAoQ7mC2nqAsU3EWMBhrD0zRsUw/viewform">Link to Rate Us</a> </h2>
     
 </body>
