--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
                <li><a href="rateus.html">Rate our game here!</a></li>
          </div>
     </ul>
-    
+    <p>REMEMBER TO TAKE THE SURVEY BEFORE PLAYING!</p>
     
 </body>
 </html>
