--- a/postpretest.html
+++ b/postpretest.html
@@ -17,7 +17,7 @@
                <li><a href="rateus.html">Rate our game here!</a></li>
          </div>
     </ul>
-    
+    <p>Please take the survey before playing the game and then after playing the game!</p>
     <h2><a href="https://docs.google.com/forms/d/e/1FAIpQLSenKiFHx8qGZz7sxD-WGITcCP1FJN8WdxYdaiSKbmh9CRUURQ/viewform">Link to Pre Test/PostTest</a> </h2>
 
  
