--- a/game.html
+++ b/game.html
@@ -20,4 +20,7 @@
     <p>REMEMBER TO TAKE THE SURVEY BEFORE PLAYING!</p>
     
 </body>
+
+<iframe frameborder="0" src="https://itch.io/embed-upload/5770295?color=074817" allowfullscreen="" width="1280" height="740"><a href="https://reni-yeno.itch.io/computer-science-cultivation">Play Computer Science Cultivation on itch.io</a></iframe>
+
 </html>
