Added best gaming experience description

--- a/game.html
+++ b/game.html
@@ -18,6 +18,8 @@
          </div>
     </ul>
     <p>REMEMBER TO TAKE THE SURVEY BEFORE PLAYING!</p>
+    <br>
+    <p>For the best gaming experience, play in full screen. Prepare for loud noises.</p>
     
 </body>
 
